# borgboi

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TUI_MVP_README.md  V2_PLAN.md  cliff.toml  index.html  justfile  mkdocs.yml  opencode.jsonc  pyproject.toml  renovate.json  sitemap.xml  zensical.toml
.basedpyright/: baseline.json
.github/: copilot-instructions.md
.github/workflows/: bump.yml  changelog-preview.yml  claude-code-review.yml  claude.yml  docs.yml  gitleaks.yml  test.yml  uv-lockfile-report.yml
docs/: index.md
docs/pages/: commands.md  getting-started.md  importing-existing-repos.md  sqlite-database.md  tracing.md  tui.md  user-configuration.md
gifs/vhs-tapes/: create-repo.tape
pages/commands/: index.html
pages/getting-started/: index.html
pages/sqlite-database/: index.html
pages/user-configuration/: index.html
scripts/: migrate_to_bb_repos.py
search/: search_index.json
src/borgboi/: __init__.py  backups.py  cli.py  config.py  dynamodb.py  models.py  orchestrator.py  rich_utils.py  s3_sync.py  tui.py  tui.tcss  tui_legacy.py  validator.py
src/borgboi/cli/: __init__.py  backup.py  config.py  exclusions.py  legacy.py  main.py  repo.py  s3.py
src/borgboi/clients/: borg.py  borg_client.py  borg_models.py  dynamodb.py  offline_storage.py  s3.py  s3_client.py
src/borgboi/clients/utils/: borg_logs.py  trash.py
src/borgboi/core/: __init__.py  errors.py  logging.py  models.py  orchestrator.py  output.py  telemetry.py  validator.py
src/borgboi/lib/: colors.py  diff.py  passphrase.py  utils.py
src/borgboi/storage/: __init__.py  base.py  db.py  dynamodb.py  migration.py  models.py  offline.py  sqlite.py  sqlite_config.py  sqlite_migration.py
src/borgboi/tcss/: app.tcss  modal.tcss
src/borgboi/tui/: __init__.py  app.py  archive_compare_screen.py  borgboi.tcss  config_panel.py  config_screen.py  daily_backup_progress.py  daily_backup_screen.py  diff_modal.py  excludes_screen.py  repo_config_screen.py  repo_info_screen.py  telemetry.py  types.py
src/borgboi/tui/features/: __init__.py
src/borgboi/tui/features/archive_compare/: __init__.py  content_diff_modal.py  screen.py
src/borgboi/tui/features/daily_backup/: __init__.py  output.py  progress.py  screen.py
src/borgboi/tui/features/repo_detail/: __init__.py  config_screen.py  info_screen.py  quota.py  workspace.py
src/borgboi/tui/screens/: __init__.py  config.py  detail.py  excludes.py  home.py  main.py
src/borgboi/tui/styles/: __init__.py
src/borgboi/tui/support/: __init__.py  telemetry.py
src/borgboi/tui/widgets/: __init__.py  config_panel.py  repo_detail.py  repo_list.py
terraform/: .terraform.lock.hcl  dynamodb.tf  iam.tf  outputs.tf  providers.tf  s3.tf
tests/: backup_cli_test.py  borg_client_test.py  cli_helpers.py  cli_test.py  config_cli_test.py  config_panel_test.py  config_test.py  conftest.py  core_logging_test.py  core_orchestrator_excludes_test.py  core_orchestrator_workflows_test.py  core_telemetry_test.py  core_validator_test.py  diff_test.py  dynamodb_test.py  exclusions_cli_test.py  models_test.py  orchestrator_test.py  output_handler_test.py  repo_cli_test.py  rich_utils_test.py  s3_cli_test.py  s3_client_test.py  s3_test.py  test_dynamodb_storage.py  test_offline_storage.py  test_passphrase.py  test_sqlite_config.py  test_sqlite_migration.py  test_sqlite_storage.py  test_storage_migration.py  trash_test.py  tui_daily_backup_screen_test.py  tui_excludes_screen_test.py  utils_test.py  validator_test.py
tests/data/: excludes.txt
tests/tui/: app_test.py  archive_compare_screen_test.py  config_panel_test.py  conftest.py  daily_backup_progress_test.py  daily_backup_screen_test.py  excludes_screen_test.py  repo_config_screen_test.py  repo_info_screen_test.py  telemetry_test.py  tui_output_handler_test.py
